--- a/Pustok/Pustok/Views/Home/Index.cshtml
+++ b/Pustok/Pustok/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model HomeViewModel
 @{
     ViewData["Title"] = "Index";
 }
@@ -15,41 +15,24 @@
                             "slidesToShow": 1,
                             "dots":true
                             }'>
-                <div class="single-slide bg-shade-whisper  ">
-                    <div class="container">
-                        <div class="home-content text-center text-sm-left position-relative">
-                            <div class="hero-partial-image image-right">
-                                <img src="../assets/image/bg-images/home-slider-2-ai.png" alt="">
-                            </div>
-                            <div class="row no-gutters ">
-                                <div class="col-xl-6 col-md-6 col-sm-7">
-                                    <div class="home-content-inner content-left-side">
-                                        <h1>H.G. Wells<br>
-                                            De Vengeance</h1>
-                                        <h2>Cover Up Front Of Books and Leave Summary</h2>
-                                        <a href="shop-grid.html" class="btn btn-outlined--primary">
-                                            $78.09 - Order Now!
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="single-slide bg-ghost-white">
+               
+
+                  @for (int i = 0; i < Model.Sliders.Count; i++)
+        {
+             <div class="single-slide bg-ghost-white">
                     <div class="container">
                         <div class="home-content text-center text-sm-left position-relative">
                             <div class="hero-partial-image image-left">
-                                <img src="../assets/image/bg-images/home-slider-1-ai.png" alt="">
+                                <img src="../assets/image/bg-images/@Model.Sliders[i].Image" alt="">
                             </div>
                             <div class="row align-items-center justify-content-start justify-content-md-end">
                                 <div class="col-lg-6 col-xl-7 col-md-6 col-sm-7">
                                     <div class="home-content-inner content-right-side">
-                                        <h1>J.D. Kurtness <br>
-                                            De Vengeance</h1>
-                                        <h2>Cover Up Front Of Books and Leave Summary</h2>
-                                        <a href="shop-grid.html" class="btn btn-outlined--primary">
-                                            $78.09 - Learn More
+                                        <h1>@Model.Sliders[i].Title1<br>
+                                            @Model.Sliders[i].Title2</h1>
+                                        <h2>@Model.Sliders[i].Desc</h2>
+                                        <a href="@Model.Sliders[i].BtnUrl" class="btn btn-outlined--primary">
+                                           @Model.Sliders[i].BtnText
                                         </a>
                                     </div>
                                 </div>
@@ -57,6 +40,8 @@
                         </div>
                     </div>
                 </div>
+        }
+
             </div>
         </section>
         <!--=================================
@@ -65,7 +50,7 @@
         <section class="mb--30">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-3 col-md-6 mt--30">
+                   @* <div class="col-xl-3 col-md-6 mt--30">
                         <div class="feature-box h-100">
                             <div class="icon">
                                 <i class="fas fa-shipping-fast"></i>
@@ -108,8 +93,25 @@
                                 <p>Call us : + 0123.4567.89</p>
                             </div>
                         </div>
+                    </div>*@
+
+
+            @for(int i= 0 ; i < Model.Features.Count; i++)
+            {
+                 <div class="col-xl-3 col-md-6 mt--30">
+                        <div class="feature-box h-100">
+                            <div class="icon">
+                                @Html.Raw(Model.Features[i].Icon)
+                            </div>
+                            <div class="text">
+                                <h5>@Model.Features[i].Desc</h5>
+                                <p>@Model.Features[i].Title</p>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                
+            }
+        </div>
             </div>
         </section>
         <!--=================================
