--- a/Pustok/Pustok/Views/Shared/_Layout.cshtml
+++ b/Pustok/Pustok/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                                                 <h3 class="menu-title"><a href="javascript:void(0)">Shop Grid </a></h3>
                                                 <ul class="mega-single-block">
                                                     <li><a href="shop-grid.html">Fullwidth</a></li>
-                                                    <li><a href="shop-grid-left-sidebar.html">left Sidebar</a></li>
+                                                    <li><a asp-controller="shop" asp-action="index">left Sidebar</a></li>
                                                     <li><a href="shop-grid-right-sidebar.html">Right Sidebar</a></li>
                                                 </ul>
                                             </li>
