--- a/Pustok/Pustok/Areas/Manage/Views/Shared/_Layout.cshtml
+++ b/Pustok/Pustok/Areas/Manage/Views/Shared/_Layout.cshtml
@@ -425,6 +425,8 @@
     <!-- Page level custom scripts -->
     <script src="~/manage/js/demo/chart-area-demo.js"></script>
     <script src="~/manage/js/demo/chart-pie-demo.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="~/manage/js/main.js"></script>
 
 </body>
 
