--- a/Pustok/Pustok/Areas/Manage/Views/Book/Index.cshtml
+++ b/Pustok/Pustok/Areas/Manage/Views/Book/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-10 mx-auto">
-            <a class="btn btn-primary">Create</a>
+            <a class="btn btn-primary" asp-action="create">Create</a>
         </div>
         <div class="col-md-10 mx-auto">
             <table class="table">
