--- a/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
+++ b/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
@@ -1,38 +1,37 @@
-﻿@*
-@model list<book>
+﻿@model List<Book>
 <div class="product-slider multiple-row  slider-border-multiple-row  sb-slick-slider"
      data-slick-setting='{
                             "autoplay": true,
-                            "autoplayspeed": 8000,
-                            "slidestoshow": 5,
+                            "autoplaySpeed": 8000,
+                            "slidesToShow": 5,
                             "rows":1,
                             "dots":true
                         }' data-slick-responsive='[
-                            {"breakpoint":1200, "settings": {"slidestoshow": 3} },
-                            {"breakpoint":768, "settings": {"slidestoshow": 2} },
-                            {"breakpoint":480, "settings": {"slidestoshow": 1} },
-                            {"breakpoint":320, "settings": {"slidestoshow": 1} }
+                            {"breakpoint":1200, "settings": {"slidesToShow": 3} },
+                            {"breakpoint":768, "settings": {"slidesToShow": 2} },
+                            {"breakpoint":480, "settings": {"slidesToShow": 1} },
+                            {"breakpoint":320, "settings": {"slidesToShow": 1} }
                         ]'>
-    @foreach (var item in model)
+    @foreach (var item in Model)
     {
         <div class="single-slide">
             <div class="product-card">
                 <div class="product-header">
                     <a href="#" class="author">
-                        @item.author.fullname
+                        @item.Author.FullName
                     </a>
                     <h3>
                         <a href="product-details.html">
-                            @item.name
+                            @item.Name
                         </a>
                     </h3>
                 </div>
                 <div class="product-card--body">
                     <div class="card-image">
-                        <img src="~/uploads/books/@item.bookımages.firstordefault(x=>x.posterstatus==true)?.name" alt="">
+                        <img src="~/uploads/books/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==true)?.Name" alt="">
                         <div class="hover-contents">
                             <a href="product-details.html" class="hover-image">
-                                <img src="~/uploads/books/@item.bookımages.firstordefault(x=>x.posterstatus==false)?.name" alt="">
+                                <img src="~/uploads/books/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==false)?.Name" alt="">
                             </a>
                             <div class="hover-btns">
                                 <a href="cart.html" class="single-btn">
@@ -44,7 +43,7 @@
                                 <a href="compare.html" class="single-btn">
                                     <i class="fas fa-random"></i>
                                 </a>
-                                <a href="#" data-toggle="modal" 
+                                <a href="#" data-toggle="modal"
                                    class="single-btn show-detail">
                                     <i class="fas fa-eye"></i>
                                 </a>
@@ -52,16 +51,16 @@
                         </div>
                     </div>
                     <div class="price-block">
-                        @if (item.discountpercent > 0)
+                        @if (item.DiscountPercent > 0)
                         {
-                            double discountedprice = item.saleprice * (100 - item.discountpercent) / 100;
-                            <span class="price">£@discountedprice</span>
-                            <del class="price-old">£@item.saleprice</del>
-                            <span class="price-discount">@item.discountpercent%</span>
+                            double discountedPrice = item.SalePrice * (100 - item.DiscountPercent) / 100;
+                            <span class="price">£@discountedPrice</span>
+                            <del class="price-old">£@item.SalePrice</del>
+                            <span class="price-discount">@item.DiscountPercent%</span>
                         }
                         else
                         {
-                            <span class="price">£@item.saleprice</span>
+                            <span class="price">£@item.SalePrice</span>
                         }
                     </div>
                 </div>
@@ -69,4 +68,4 @@
         </div>
     }
 
-</div>*@
+</div>
