--- a/Pustok/Pustok/Views/Home/Index.cshtml
+++ b/Pustok/Pustok/Views/Home/Index.cshtml
@@ -1,10 +1,4 @@
-﻿Skip to content
-Search or jump to…
-Pull requests
-Issues
-Marketplace
-Explore
- 
+﻿
 
 
 @model HomeViewModel 
@@ -32,7 +26,7 @@ Explore
                         <div class="container">
                             <div class="home-content text-center text-sm-left position-relative">
                                 <div class="hero-partial-image image-@(i%2==0?"right":"left")">
-                                    <img src="~/uploads/sliders/@item.Image" alt="">
+                                    <img src="~/upload/slider/@item.Image" alt="">
                                 </div>
                                 <div class="row @(i%2==0?"":"align-items-center justify-content-start justify-content-md-end")">
                                     <div class="col-xl-6 col-md-6 col-sm-7">
@@ -158,7 +152,7 @@ Explore
                             <span class="arrow-icon"></span>
                         </li>
                     </ul>
-                   @* <div class="tab-content" id="myTabContent">
+                    <div class="tab-content" id="myTabContent">
                         <div class="tab-pane active" id="newBooks" role="tabpanel" aria-labelledby="shop-tab">
                             @await Html.PartialAsync("_BookTabSliderPartial",Model.NewBooks)
                         </div>
@@ -168,7 +162,7 @@ Explore
                         <div class="tab-pane" id="discountedBooks" role="tabpanel" aria-labelledby="woman-tab">
                             @await Html.PartialAsync("_BookTabSliderPartial", Model.DiscountedBooks)
                         </div>
-                    </div>*@
+                    </div>
                 </div>
             </div>
         </section>
