--- a/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
+++ b/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
@@ -43,8 +43,8 @@
                                 <a href="compare.html" class="single-btn">
                                     <i class="fas fa-random"></i>
                                 </a>
-                                <a href="#" data-toggle="modal"
-                                   class="single-btn show-detail">
+                                <a  data-toggle="modal"
+                                   class="single-btn show-detail" asp-route="">
                                     <i class="fas fa-eye"></i>
                                 </a>
                             </div>
