--- a/Pustok/Pustok/Views/Home/Index.cshtml
+++ b/Pustok/Pustok/Views/Home/Index.cshtml
@@ -1,7 +1,4 @@
-﻿
-
-
-@model HomeViewModel 
+﻿@model HomeViewModel 
 @{
     ViewData["Title"] = "Home Page";
 }
@@ -26,7 +23,7 @@
                         <div class="container">
                             <div class="home-content text-center text-sm-left position-relative">
                                 <div class="hero-partial-image image-@(i%2==0?"right":"left")">
-                                    <img src="~/upload/slider/@item.Image" alt="">
+                                    <img src="~/uploads/sliders/@item.Image" alt="">
                                 </div>
                                 <div class="row @(i%2==0?"":"align-items-center justify-content-start justify-content-md-end")">
                                     <div class="col-xl-6 col-md-6 col-sm-7">
@@ -1297,3 +1294,4 @@
                 </div>
             </div>
         </section>
+
