--- a/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
+++ b/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
@@ -28,10 +28,10 @@
                 </div>
                 <div class="product-card--body">
                     <div class="card-image">
-                        <img src="~/uploads/books/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==true)?.Name" alt="">
+                        <img src="~/upload/book/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==true)?.Name" alt="">
                         <div class="hover-contents">
                             <a href="product-details.html" class="hover-image">
-                                <img src="~/uploads/books/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==false)?.Name" alt="">
+                                <img src="~/upload/book/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==false)?.Name" alt="">
                             </a>
                             <div class="hover-btns">
                                 <a href="cart.html" class="single-btn">
@@ -43,8 +43,8 @@
                                 <a href="compare.html" class="single-btn">
                                     <i class="fas fa-random"></i>
                                 </a>
-                                <a  data-toggle="modal"
-                                   class="single-btn show-detail" asp-route="">
+                                <a asp-controller="book" asp-action="getbookmodal" asp-route-id="@item.Id" 
+                                   class="single-btn show-detail">
                                     <i class="fas fa-eye"></i>
                                 </a>
                             </div>
