--- a/Pustok/Pustok/Areas/Manage/Views/Book/Create.cshtml
+++ b/Pustok/Pustok/Areas/Manage/Views/Book/Create.cshtml
@@ -18,17 +18,25 @@
                     <div class="col-md-6">
                         <div class="form-group">
                             <label asp-for="AuthorId">Authors</label>
-                            <select asp-for="AuthorId" class="form-control" asp-items="new SelectList((List<Author>)ViewBag.Authors,nameof(Author.Id),nameof(Author.FullName))">
+                            <select asp-for="AuthorId" class="form-control"  asp-items="new SelectList((List<Author>)ViewBag.Authors,nameof(Author.Id),nameof(Author.FullName))">
                             </select>
                             <span class="text-danger" asp-validation-for="AuthorId"></span>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                     <div class="col-md-6">
                         <div class="form-group">
                             <label asp-for="CategoryId">Genres</label>
                             <select asp-for="CategoryId" class="form-control" asp-items="new SelectList((List<Category>)ViewBag.Genres,nameof(Category.Id),nameof(Category.Name))">
                             </select>
                             <span class="text-danger" asp-validation-for="CategoryId"></span>
+                        </div>
+                    </div>
+                     <div class="col-md-6">
+                        <div class="form-group">
+                            <label asp-for="TagIds">Tag</label>
+                            <select asp-for="TagIds" class="form-control" asp-items="new SelectList((List<Tag>)ViewBag.Tags,nameof(Tag.Id),nameof(Tag.Name))">
+                            </select>
+                            <span class="text-danger" asp-validation-for="TagIds"></span>
                         </div>
                     </div>
                 </div>
@@ -50,26 +58,40 @@
                         <span class="text-danger" asp-validation-for="DiscountPercent"></span>
                     </div>
                 </div>
-             
-                <div class="mb-3">
-                    <label asp-for="Desc" class="form-label">Desc</label>
-                    <input asp-for="Desc" class="form-control">
-                    <span class="text-danger" asp-validation-for="Desc"></span>
+                <div class="row">
+                   
+                    <div class="mb-3 col-md-4">
+                        <label asp-for="Rate" class="form-label">Rate</label>
+                        <input asp-for="Rate" class="form-control">
+                        <span class="text-danger" asp-validation-for="Rate"></span>
+                    </div>
+                    <div class="mb-3 col-md-4 d-flex align-items-center">
+                        <div class="custom-control custom-checkbox small">
+                            <input asp-for="IsAvailable" type="checkbox" class="custom-control-input">
+                            <label asp-for="IsAvailable" class="custom-control-label">
+                                IsAvaliable
+                            </label>
+                        </div>
+                    </div>
                 </div>
+                
 
                 <div class="mb-3">
                     <label asp-for="Desc" class="form-label">Desc</label>
                     <textarea asp-for="Desc" class="form-control"></textarea>
                     <span class="text-danger" asp-validation-for="Desc"></span>
                 </div>
-                <div class="mb-3">
+                  <div class="mb-3">
                     <label asp-for="PosterFile" class="form-label">PosterFile</label>
                     <input asp-for="PosterFile" class="form-control">
                     <span class="text-danger" asp-validation-for="PosterFile"></span>
                 </div>
-
-
-                <div class="mb-3">
+                   <div class="mb-3">
+                    <label asp-for="HoverPosterFile" class="form-label">HoverPosterFile</label>
+                    <input asp-for="HoverPosterFile" class="form-control">
+                    <span class="text-danger" asp-validation-for="HoverPosterFile"></span>
+                </div>
+                   <div class="mb-3">
                     <label asp-for="ImageFiles" class="form-label">ImageFiles</label>
                     <input asp-for="ImageFiles" class="form-control">
                     <span class="text-danger" asp-validation-for="ImageFiles"></span>
