--- a/Pustok/Pustok/Areas/Manage/Views/Book/Index.cshtml
+++ b/Pustok/Pustok/Areas/Manage/Views/Book/Index.cshtml
@@ -1,41 +1,43 @@
-﻿@model List<Book>;
+﻿@model List<Book>
 @{
     ViewData["Title"] = "Index";
-  
+    int count = 0;
 }
 
 <div class="container">
     <div class="row">
-        <div class="col-md-10 mx-auto">
-            <a class="btn btn-primary" asp-action="create">Create</a>
+        <div class="col-md-12 mx-auto">
+            <a asp-action="create" class="btn btn-primary">Create</a>
         </div>
-        <div class="col-md-10 mx-auto">
+        <div class="col-md-12 mx-auto">
             <table class="table">
                 <thead>
                     <tr>
+                        <th scope="col">#</th>
                         <th scope="col">Name</th>
-                        <th scope="col">Cost Price</th>
-                        <th scope="col">Sale Price </th>
-                        <th scope="col">Genre Name</th>
-                         <th scope="col">Author Name</th>
+                        <th scope="col">Author</th>
+                        <th scope="col">Genre</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">PageSize</th>
                         <th scope="col">Actions</th>
-                        
                         
                     </tr>
                 </thead>
                 <tbody>
                     @foreach (var book in Model)
                     {
-                       @* count++;*@
+                        count++;
                         <tr>
-                            <th scope="row">@book.Name</th>
-                            <td>@book.CostPrice</td>
-                            <td>@book.SalePrice</td>
+                            <th scope="row">@count</th>
+                            <td>@book.Name</td>
+                            <td>@book.Author.FullName</td>
                             <td>@book.Category.Name</td>
-                             <td>@book.Author.FullName</td>
+                            <td>@book.SalePrice</td>
+                           
+
                             <td>
-                                <a class="btn btn-warning">Edit</a>
-                                <a class="btn btn-danger">Delete</a>
+                                <a asp-action="edit" asp-route-id="@book.Id" class="btn btn-warning"><i class="fa-solid fa-pen-to-square"></i></a>
+                                <a asp-action="delete" asp-route-id="@book.Id"  class="btn btn-danger sweet-delete"><i class="fa-solid fa-trash"></i></a>
                             </td>
                         </tr>
                     }
@@ -45,8 +47,3 @@
         </div>
     </div>
 </div>
-
-
-
-
-
