--- a/Pustok/Pustok/Areas/Manage/Views/_ViewImports.cshtml
+++ b/Pustok/Pustok/Areas/Manage/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Pustok.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AuthoringTagHelpers
+@using Pustok.Areas.Manage.ViewModels
+
