--- a/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
+++ b/Pustok/Pustok/Views/Shared/_BookTabSliderPartial.cshtml
@@ -21,17 +21,17 @@
                         @item.Author.FullName
                     </a>
                     <h3>
-                        <a href="product-details.html">
+                        <a asp-action="detail" asp-controller="book" asp-route-id="@item.Id">
                             @item.Name
                         </a>
                     </h3>
                 </div>
                 <div class="product-card--body">
                     <div class="card-image">
-                        <img src="~/upload/book/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==true)?.Name" alt="">
+                        <img src="~/uploads/books/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==true)?.Name" alt="">
                         <div class="hover-contents">
                             <a href="product-details.html" class="hover-image">
-                                <img src="~/upload/book/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==false)?.Name" alt="">
+                                <img src="~/uploads/books/@item.BookImages.FirstOrDefault(x=>x.PosterStatus==false)?.Name" alt="">
                             </a>
                             <div class="hover-btns">
                                 <a href="cart.html" class="single-btn">
